--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,5 +17,12 @@
       Nollaa
     </button>
   </form>
+  <form action="/set" method="POST">
+    <input type="number" name="new_value" min="0" required>
+    <button type="submit">
+      Aseta
+    </button>
+
+  </form>
 </body>
 </html>
